# gutenberg-cleaner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: gutenberg_sample.txt
src/gutenberg_cleaner/: __init__.py  boilerplate.py  cleaner.py  cli.py  converters.py  headings.py  reports.py  scene_breaks.py  toc.py
tests/: test_boilerplate.py  test_cleaner.py  test_cli.py  test_headings.py  test_scene_breaks.py  test_toc.py
tests/fixtures/: gutenberg_sample.txt  messy_toc.md  ornamental_breaks.md
